Log almost working

--- a/testconfig.cfg
+++ b/testconfig.cfg
@@ -741,7 +741,7 @@ Begin_Of_Multi_Line_String
   Copyright (c) 2001-2006 Actipro Software LLC.  All rights reserved.
   http://www.ActiproSoftware.com/Products/DotNet/
 
---><ToolWindowLayout Version="1.0"><LayoutData><HostContainerControl><ToolWindowContainer Dock="Left" Size="250, 577" SelectedToolWindowGuid="32e4b564-02ec-46fd-9296-f6315c198b9d"><ToolWindow Key="{F5E09530-AAE7-48d9-B925-CEF5027AA97D}" Guid="32e4b564-02ec-46fd-9296-f6315c198b9d" DockedSize="246, 325" FloatingSize="325, 380" HasOptions="False" ImageIndex="-1" Text="Symbol Explorer" TitleBarText="Symbol Explorer"><AutoHideStateInfo RootDock="Left" /><DockedInsideHostStateInfo RootDock="Left" IsAttached="False" /><DockedOutsideHostStateInfo IsAttached="False" /></ToolWindow></ToolWindowContainer></HostContainerControl><AutoHide Dock="Left" /><AutoHide Dock="Right" /><AutoHide Dock="Top" /><AutoHide Dock="Bottom" /><TabbedDocuments Orientation="Horizontal" /><FloatingContainers /><Hidden /></LayoutData><CustomData /></ToolWindowLayout>
+--><ToolWindowLayout Version="1.0"><LayoutData><HostContainerControl><ToolWindowContainer Dock="Left" Size="250, 920" SelectedToolWindowGuid="32e4b564-02ec-46fd-9296-f6315c198b9d"><ToolWindow Key="{F5E09530-AAE7-48d9-B925-CEF5027AA97D}" Guid="32e4b564-02ec-46fd-9296-f6315c198b9d" DockedSize="246, 325" FloatingSize="325, 380" HasOptions="False" ImageIndex="-1" Text="Symbol Explorer" TitleBarText="Symbol Explorer"><AutoHideStateInfo RootDock="Left" /><DockedInsideHostStateInfo RootDock="Left" IsAttached="False" /><DockedOutsideHostStateInfo IsAttached="False" /></ToolWindow></ToolWindowContainer></HostContainerControl><AutoHide Dock="Left" /><AutoHide Dock="Right" /><AutoHide Dock="Top" /><AutoHide Dock="Bottom" /><TabbedDocuments Orientation="Horizontal" /><FloatingContainers /><Hidden /></LayoutData><CustomData /></ToolWindowLayout>
 End_Of_Serialized_Data 3
 End_Of_Object VDesktop 3
 VDesktop 3 Begin_Of_Object
@@ -756,7 +756,7 @@ Begin_Of_Multi_Line_String
   Copyright (c) 2001-2006 Actipro Software LLC.  All rights reserved.
   http://www.ActiproSoftware.com/Products/DotNet/
 
---><ToolWindowLayout Version="1.0"><LayoutData><HostContainerControl><ToolWindowContainer Dock="Left" Size="329, 593" SelectedToolWindowGuid="32e4b564-02ec-46fd-9296-f6315c198b9d"><ToolWindow Key="{F5E09530-AAE7-48d9-B925-CEF5027AA97D}" Guid="32e4b564-02ec-46fd-9296-f6315c198b9d" DockedSize="325, 325" FloatingSize="325, 380" HasOptions="False" ImageIndex="-1" Text="Symbol Explorer" TitleBarText="Symbol Explorer"><AutoHideStateInfo RootDock="Left" /><DockedInsideHostStateInfo RootDock="Left" IsAttached="False" /><DockedOutsideHostStateInfo IsAttached="False" /></ToolWindow></ToolWindowContainer></HostContainerControl><AutoHide Dock="Left" /><AutoHide Dock="Right" /><AutoHide Dock="Top" /><AutoHide Dock="Bottom" /><TabbedDocuments Orientation="Horizontal" /><FloatingContainers /><Hidden /></LayoutData><CustomData /></ToolWindowLayout>
+--><ToolWindowLayout Version="1.0"><LayoutData><HostContainerControl><ToolWindowContainer Dock="Left" Size="329, 920" SelectedToolWindowGuid="32e4b564-02ec-46fd-9296-f6315c198b9d"><ToolWindow Key="{F5E09530-AAE7-48d9-B925-CEF5027AA97D}" Guid="32e4b564-02ec-46fd-9296-f6315c198b9d" DockedSize="325, 325" FloatingSize="325, 380" HasOptions="False" ImageIndex="-1" Text="Symbol Explorer" TitleBarText="Symbol Explorer"><AutoHideStateInfo RootDock="Left" /><DockedInsideHostStateInfo RootDock="Left" IsAttached="False" /><DockedOutsideHostStateInfo IsAttached="False" /></ToolWindow></ToolWindowContainer></HostContainerControl><AutoHide Dock="Left" /><AutoHide Dock="Right" /><AutoHide Dock="Top" /><AutoHide Dock="Bottom" /><TabbedDocuments Orientation="Horizontal" /><FloatingContainers /><Hidden /></LayoutData><CustomData /></ToolWindowLayout>
 End_Of_Serialized_Data 3
 End_Of_Object VDesktop 3
 VDesktop 3 Begin_Of_Object
@@ -802,14 +802,14 @@ END_OF_DOCK_INFO
 0
 0
 1
-752 573
+1666 916
 END_OF_DESKTOP_DATA
 6
 0 1 0 0 -1 -1 192 114 769 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-2
+4
 0
 0
 0
@@ -942,7 +942,7 @@ VDiagnoseBoxRoot 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 1
-1 1 0 1 -1 -1 -1 -1 385 6 1143 578
+1 2 0 1 -1 -1 -1 -1 385 6 1143 578
 _952_AGSM_Automatic_Gearbox_Shifter_Module - Diagnostics Console
 1
 
@@ -954,18 +954,18 @@ MDI_DOCK_INFO_END
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-1
+2
 0
 0
 1
-752 573
+1666 916
 END_OF_DESKTOP_DATA
 6
 0 1 0 0 -1 -1 222 114 890 458
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-3
+2
 0
 0
 0
@@ -1097,7 +1097,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 0 0 1 -1 -1 -1 -1 599 -536 1099 -46
+0 1 0 1 -1 -1 -1 -1 599 -536 1099 -46
 
 1
 
@@ -1109,11 +1109,11 @@ MDI_DOCK_INFO_END
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-0
+1
 0
 0
 1
-752 573
+1666 916
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 22 22 953 535
@@ -2676,7 +2676,7 @@ End_Of_Object VConfigMessage 16
 0
 End_Of_Object VTraceControlFixedModeExpansionItems 15
 14
-D:\Projektarbete\Program\CANoe\templates
+D:\Exjobb\Program\CANoe\templates
 End_Of_Serialized_Data 14
 14
 Trace-Fenster
@@ -2735,7 +2735,7 @@ VUniqueBox 16 Begin_Of_Object
 VBoxRoot 17 Begin_Of_Object
 1
 1
-1 2 0 1 -1 -1 -1 -1 0 111 1001 588
+1 1 0 1 -1 -1 -1 -1 0 111 1001 588
 
 1
 
@@ -2747,7 +2747,7 @@ MDI_DOCK_INFO_END
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 0
-2
+1
 0
 0
 0
@@ -2758,11 +2758,11 @@ END_OF_DESKTOP_DATA
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-2
+1
 0
 0
 1
-1033 589
+1587 916
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 431 301 1013 595
@@ -3574,7 +3574,7 @@ VUniqueBox 4 Begin_Of_Object
 VBoxRoot 5 Begin_Of_Object
 1
 3
-0 3 0 1 -1 -1 -1 -1 -144 -454 741 36
+0 0 0 1 -1 -1 -1 -1 -144 -454 741 36
 
 1
 
@@ -3586,22 +3586,22 @@ MDI_DOCK_INFO_END
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-3
+0
 0
 0
 1
-752 573
+1666 916
 END_OF_DESKTOP_DATA
 6
-0 2 0 562 -1 -1 44 44 975 557
+0 2 0 888 -1 -1 44 44 975 557
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-1
+2
 0
 0
 1
-1033 589
+1587 916
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 44 44 975 557
@@ -3663,7 +3663,7 @@ End_Of_Object VGrMnBox 3
 VDOLocalInfoStruct 3 Begin_Of_Object
 3
 1
-160
+166
 VDAOBus 4 Begin_Of_Object
 1
 1
@@ -4292,7 +4292,7 @@ VConfigurationRoot 8 Begin_Of_Object
 End_Of_Object VConfigurationRoot 8
 <VFileName V4 QL> 1 "source_files\SendRequests.can" 
 1
-D:\Projektarbete\Git\source_files\SendRequests.cbf
+D:\Exjobb\CANoe exjob\source_files\SendRequests.cbf
 send_node
 Testdatabase
 5
@@ -4361,7 +4361,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-683890021
+2386274703
 0
 NodeSignalPanelBustypeCount 0
 End_Of_Object VSimulationNode 6
@@ -4389,7 +4389,7 @@ VConfigurationRoot 8 Begin_Of_Object
 End_Of_Object VConfigurationRoot 8
 <VFileName V4 QL> 1 "source_files\3SensorShifter.can" 
 1
-D:\Projektarbete\Git\source_files\3SensorShifter.cbf
+D:\Exjobb\CANoe exjob\source_files\3SensorShifter.cbf
 receiver_node
 Testdatabase
 5
@@ -4458,7 +4458,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-3278835138
+1724307315
 0
 NodeSignalPanelBustypeCount 1
 CAN
@@ -5068,7 +5068,7 @@ VConfigurationRoot 8 Begin_Of_Object
 End_Of_Object VConfigurationRoot 8
 <VFileName V4 QL> 1 "source_files\GearShifter.can" 
 1
-D:\Projektarbete\Git\source_files\GearShifter.cbf
+D:\Exjobb\CANoe exjob\source_files\GearShifter.cbf
 << default >>
 
 5
@@ -5134,7 +5134,7 @@ VSimulinkModelViewerConfiguration 7 Begin_Of_Object
 End_Of_Object VSimulinkModelViewerConfiguration 7
 1
 0
-3458711290
+3459580757
 0
 NodeSignalPanelBustypeCount 0
 End_Of_Object VSimulationNode 6
@@ -5171,7 +5171,7 @@ NULL
 End_Of_Object VDOLocalInfoStruct 3
 0.000000
 0 0
-1 0 2 59421 1 196 1 2882400001 1139 1335 -316 138 2882400002  0 0 0 0 0 0 1 2882400001 1134 1134 -314 -314 2882400002  0 0 0 387945424 0 380702100   3 
+1 0 2 59421 1 196 1 2882400001 787 983 -348 105 2882400002  0 0 0 0 0 0 1 2882400001 782 782 -346 -346 2882400002  0 0 0 1658993944 0 0   3 
 SS_BEGIN_COMMON_INFO
 1
 0
@@ -5183,7 +5183,7 @@ CAN
 1
 1
 1
-388479232 1 0 1 0 1 1 0 128 36 2000 1 
+495016600 1 0 1 0 1 1 0 128 14 2000 1 
 SS_BEGIN_COMMON_INFO
 1
 3
@@ -5812,7 +5812,7 @@ VUniqueBox 3 Begin_Of_Object
 VBoxRoot 4 Begin_Of_Object
 1
 3
-1 2 0 1 -1 -1 -1 -1 385 -250 1074 5
+1 3 0 1 -1 -1 -1 -1 385 -250 1074 5
 Write
 1
 
@@ -5824,11 +5824,11 @@ MDI_DOCK_INFO_END
 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
 END_OF_DOCK_INFO
 1
-2
+3
 0
 0
 1
-752 573
+1666 916
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 0 0 1001 294
@@ -5839,7 +5839,7 @@ END_OF_DOCK_INFO
 0
 0
 1
-1033 589
+1587 916
 END_OF_DESKTOP_DATA
 6
 0 1 -1 -1 -1 -1 0 402 423 595
@@ -5916,7 +5916,7 @@ End_Of_Serialized_Data 2
 End_Of_Object VWriteBox 2
 VWinStore 2 Begin_Of_Object
 1
-22 2 1 -1 -1 -1 -1 344 0 1362 737
+22 2 3 -1 -1 -1 -1 344 0 1362 737
 End_Of_Child_List
 End_Of_Object VWinStore 2
 VWinStore 2 Begin_Of_Object
@@ -6053,7 +6053,7 @@ VScanBaudrateConfiguration 2 Begin_Of_Object
 1
 End_Of_Object VScanBaudrateConfiguration 2
 4
-4
+5
 VPanelBox 2 Begin_Of_Object
 2
 VUniqueBox 3 Begin_Of_Object
@@ -6435,7 +6435,7 @@ END_OF_DOCK_INFO
 1
 -1
 1
-0 1 -1 -1 -1 -1 981 319 1310 627
+0 1 -1 -1 -1 -1 1127 82 1456 390
 1
 1
 0 0
@@ -6519,6 +6519,126 @@ VPanelAdapter 3 Begin_Of_Object
 1
 0
 0
+VPanelInfo 4 Begin_Of_Object
+1
+VPanelActiveX 5 Begin_Of_Object
+1
+4294967295
+0
+<VFileName V4 QL> 1 "" 
+0
+End_Of_Object VPanelActiveX 5
+End_Of_Object VPanelInfo 4
+1
+End_Of_Object VPanelAdapter 3
+
+End_Of_Serialized_Data 2
+End_Of_Object VPanelBox 2
+VPanelBox 2 Begin_Of_Object
+2
+VUniqueBox 3 Begin_Of_Object
+1
+VBoxRoot 4 Begin_Of_Object
+1
+3
+1 -1 0 1 0 0 0 0 329 179 1320 720
+logPanel
+1
+
+MDI_DOCK_INFO_END
+5
+1
+6
+0 1 -1 -1 -1 -1 0 0 496 309
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+1
+-1
+1
+0 1 -1 -1 -1 -1 203 677 699 986
+1
+1
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 -1 -1 -1 -1 2 23 498 332
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 1 -1 -1 -1 -1 2 23 502 336
+1
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 -1 -1 -1 -1 4 46 500 355
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 1 -1 -1 -1 -1 4 46 504 359
+1
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+0 1
+1
+6
+0 1 -1 -1 -1 -1 6 69 502 378
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 1 -1 -1 -1 -1 6 69 506 382
+1
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 -1 -1 -1 -1 8 92 504 401
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 1 -1 -1 -1 -1 8 92 508 405
+1
+0
+0 0
+END_OF_DESKTOP_DATA
+6
+0 1 -1 -1 -1 -1 10 115 506 424
+6 3 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 -1 -1 32767 0 0 0 0 0 0 0 0 0 0 -1 -1 0 0 0 0 0 0 
+END_OF_DOCK_INFO
+0
+-1
+1
+0 1 -1 -1 -1 -1 10 115 510 428
+1
+0
+0 0
+END_OF_DESKTOP_DATA
+END_OF_DESKTOP_DATA_COLLECTION
+0
+END_OF_DESKTOP_MEMBER
+{3DFAB1BA-B4CC-49C3-B4F0-1F3991F59A52}
+0
+End_Of_Object VBoxRoot 4
+1 -1 0 0 0 0 0 0 0 0 0 0
+End_Of_Object VUniqueBox 3
+2
+VPanelAdapter 3 Begin_Of_Object
+2
+<VFileName V4 QL> 1 "Panel\logPanel.xvp" 
+1
+0
+494535320
 VPanelInfo 4 Begin_Of_Object
 1
 VPanelActiveX 5 Begin_Of_Object
